# InfraFoundry

./: .gitignore  README.md  pyproject.toml
.github/workflows/: verify-stacks.yml
stacks/elasticsearch-kibana/: .env.example  docker-compose.yml
stacks/elasticsearch-kibana/setup/: data.json  entrypoint.sh
stacks/minio/docker/: .env.example  docker-compose.yml
stacks/n8n-standalone/docker/: .env.example  docker-compose.yml
